# MarketData

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs  market_data.rs  types.rs  utils.rs
src/types/: bucket.rs  market_data.rs  mod.rs
