[package]
name = "MarketData"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
parking_lot = "0.12.4"
rust_decimal = { version = "1.37.2", features = ["serde", "serde-with-arbitrary-precision"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tdigest = "0.2.3"
thiserror = "2.0.12"
