[package]
name = "market_data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
num_cpus = "1.17.0"
parking_lot = "0.12.4"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tdigest = "0.2.3"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.6.0"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false
